@@ -33,6 +33,7 @@ NOTE: Use older wallet version (e.g. 1.9.3) if you had wallet type 2 or 4 alread
 * Client: Assume blocks and txs received from authoried peers as trusted
 * Client: Wallet is being loaded in the background after the chain sync is finished
 * Client: New config value "LastTrustedBlock" used to speed up initial chain sync.
+* Lib/utxo: Largely improved speed of Unspent.UnspentGet()
 
 1.9.3 - 2017-12-26
 * Client: Removed a rare deadlock that could happen in network.AddB2G() on Mutex_net.Lock()
